# FinSight-gateway

./: .dockerignore  .env.dist  Makefile  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py
